add unicode hex in place of pokeball symbol

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           <div class="list-display"></div>
           <div class="sprite-container"></div>
           <div class="flavor-text-box"></div>
-          <div class="add-team-box">Touch Sprite to Add to Team <span>◓</span></div>
+          <div class="add-team-box">Touch Sprite to Add to Team <span>&#x25d3</span></div>
         </div>
         <div class="tiny-button red"></div>
         <div class="speaker">
